# annotation

./: .env.sample  .env.sample.dev  .env.sample.prod  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.prod  README.md  docker-compose.dev.yml  docker-compose.prod.yml  package-lock.json  pyproject.toml
.github/workflows/: release.yml
api/: main.py  settings.py
api/routers/: annotation.py  auth.py  log.py  notebook.py  source.py  step.py
api/service/: activity_log.py  annotation_definitions.py  auth.py  memory_cache.py  notebook_parser.py  source_parser.py  store.py
app/: Dockerfile  Dockerfile.prod  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.js  vite.config.ts
app/src/: App.css  App.jsx  App.tsx  api.js  colors.js  index.css
app/src/components/: ActivityLog.css  ActivityLog.jsx  AnnotationPanel.css  AnnotationPanel.jsx  FileUpload.css  FileUpload.jsx  Login.css  Login.jsx  SourceViewer.css  SourceViewer.jsx  Workspace.jsx  profile-code-viewer.stories.tsx  profile-code-viewer.tsx
app/src/store/: index.ts
