[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api"]

[project]
name = "annotation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.137.2",
    "ujson>=5.13.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
]

[tool.fastapi]
entrypoint = "api.main:app"
