[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api"]

[project]
name = "annotation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.137.2",
    "google-auth>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "requests>=2.31.0",
    "ujson>=5.13.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
]

[tool.fastapi]
entrypoint = "api.main:app"
